--- a/user-data.yaml
+++ b/user-data.yaml
@@ -1,7 +1,7 @@
 #cloud-config
-preserve_hostname: false
+preserve_hostname: false  # Feels wrong setting this to false, but otherwise will preserve the aws internal hostname "ip-99-99-99-99"
 hostname: ${aws_ec2_instance_name}
-fqdn: ${aws_ec2_instance_name}.parkrunpointsleague.org
+fqdn: ${aws_ec2_instance_hostname_fqdn}
 manage_etc_hosts: true
 
 write_files:
@@ -11,10 +11,19 @@ write_files:
   content: |
     #!/bin/bash
     AWS_EC2_INSTANCE_NAME=${aws_ec2_instance_name}
+    AWS_EC2_INSTANCE_HOSTNAME_FQDN=${aws_ec2_instance_hostname_fqdn}
     AWS_REGION=${aws_region}
     AWS_ZONES=(${aws_zones})
     PRPL_MOTD_MSG="Welcome to ParkRun Points League : Nexus"
     PRPL_INIT_DEBUG_ENABLED=TRUE  # unset this var to disable
+
+- path: /usr/local/etc/prpl-initial-startup_route53.config
+  owner: root:root
+  permissions: '0600'
+  content: |
+    #!/bin/bash
+    PRPL_ROUTE53_ENABLED=${route53_enabled}
+    PRPL_ROUTE53_PRIVATE_HOSTED_ZONE_ID=${route53_private_hosted_zone_id}
 
 - path: /usr/local/etc/prpl-initial-startup_cloudwatch.config
   owner: root:root
