--- a/user-data.yaml
+++ b/user-data.yaml
@@ -23,6 +23,7 @@ write_files:
   content: |
     #!/bin/bash
     PRPL_ROUTE53_ENABLED=${route53_enabled}
+    PRPL_ROUTE53_DIRECT_DNS_UPDATE_ENABLED=${route53_direct_dns_update_enabled}
     PRPL_ROUTE53_PRIVATE_HOSTED_ZONE_ID=${route53_private_hosted_zone_id}
 
 - path: /usr/local/etc/prpl-initial-startup_cloudwatch.config
